[package]
name = "gpsinfo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bytes = "1.4.0"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
crossterm = "0.27"
futures = "0.3.28"
ratatui = "0.22.0"
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.8", features = ["codec"] }
