[package]
name = "gpsinfo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.11"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }
crossterm = "0.29"
futures = "0.3"
ratatui = "0.29"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tokio-serial = "5.4"
tokio-util = { version = "0.7", features = ["codec"] }
